--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ img {
 .logo {
   font-family: Raleway;
   margin-right: 93px;
-  font-weight: 900;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.192;
   letter-spacing: 0.03em;
@@ -170,7 +170,7 @@ img {
   line-height: 1.142;
   letter-spacing: 0.02em;
   color: var(--second-level-color);
-  display: flex;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -324,30 +324,7 @@ img {
   color: var(--mostly-used-color);
 }
 
-.modal-form-input {
-  display: block;
-  width: 100%;
-  height: 40px;
-  padding-left: 42px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-input:focus,
-.modal-form-input:hover {
-  border: 1px solid var(--accent-color);
-
-  border-radius: 4px;
-  outline: transparent;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-input:focus + .modal-form-icon,
-.modal-form-input:hover + .modal-form-icon {
-  fill: var(--accent-color);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+/* ____________________________________ */
 
 .modal-form-input-label {
   margin-bottom: 4px;
@@ -358,9 +335,29 @@ img {
   color: var(--second-level-color);
 }
 
+.modal-input-hint {
+  display: block;
+  margin-bottom: 4px;
+  margin-top: 10px;
+}
+
 .modal-form-input-wrapper {
   display: block;
   position: relative;
+}
+
+.modal-form-input-wrapper:hover .modal-form-input {
+  border: 1px solid var(--accent-color);
+}
+
+.modal-form-input {
+  display: block;
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-icon {
@@ -372,6 +369,25 @@ img {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-form-icon:hover {
+  fill: var(--accent-color);
+}
+
+.modal-form-input:focus,
+.modal-form-input:hover {
+  border: 1px solid var(--accent-color);
+
+  border-radius: 4px;
+  outline: transparent;
+}
+
+.modal-form-input:focus + .modal-form-icon,
+.modal-form-input:hover + .modal-form-icon {
+  fill: var(--accent-color);
+}
+
+/* ____________________________________ */
 
 .comment-field {
   resize: none;
@@ -464,12 +480,6 @@ img {
 .modal-form-submit-btn:hover,
 .modal-form-submit-btn:focus {
   background-color: #188ce8;
-}
-
-.modal-input-hint {
-  display: block;
-  margin-bottom: 4px;
-  margin-top: 10px;
 }
 
 /* =========HERE ENDS HERO STYLES======== */
@@ -742,12 +752,15 @@ img {
   margin-right: 30px;
 }
 
+.customers-item:last-child {
+  margin-right: 0px;
+}
+
 /* ==========HERE ENDS MAIN STYLES========== */
 
 /* =========FOOTER STYLES========== */
 .footer {
   background-color: #2f303a;
-
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -761,18 +774,32 @@ img {
   color: #ffffff;
 }
 
+.footer-list-item {
+  margin-bottom: 9px;
+}
+
 .main-contacts {
   font-family: inherit;
   font-style: inherit;
+  min-width: 231px;
 }
 
-.main-contacts .contact-info {
-  margin-bottom: 9px;
+.footer-contact-info {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-contact-info:hover,
+.footer-contact-info:focus {
+  color: var(--accent-color);
 }
 
 .footer .container {
   width: 1200px;
-
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
@@ -789,12 +816,11 @@ img {
 
 .address-on-map {
   font-weight: 400;
-  display: block;
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
   color: #ffffff;
-  margin-bottom: 9px;
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-on-map:hover,
@@ -804,6 +830,7 @@ img {
 
 .footer-social-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-social-item {
@@ -816,6 +843,7 @@ img {
 
 .footer-links-list {
   margin-left: 70px;
+  margin-right: 93px;
 }
 
 .join-us {
@@ -855,6 +883,76 @@ img {
 .footer-social-link:hover,
 .footer-social-link:focus {
   background-color: var(--accent-color);
+}
+
+.footer-submit-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-action-call {
+  margin-bottom: 20px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.footer-submit-form {
+  display: flex;
+}
+
+.footer-submit-input {
+  margin-right: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  background-color: inherit;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 16px;
+  width: 358px;
+  height: 50px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  outline: none;
+}
+
+.footer-submit-input:focus {
+  border: 1px solid var(--accent-color);
+  border-radius: 3px;
+}
+
+.footer-submit-button {
+  display: flex;
+  align-items: center;
+  min-width: 200px;
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border: none;
+  border-radius: 4px;
+  padding: 10px 28px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-submit-button:hover,
+.footer-submit-button:focus {
+  background-color: #188ce8;
+}
+
+.submit-icon {
+  margin-left: 10px;
 }
 
 /* =======HERE ENDS FOOTER STYLES========= */
