--- a/css/style.css
+++ b/css/style.css
@@ -339,6 +339,12 @@ img {
   display: block;
   margin-bottom: 4px;
   margin-top: 10px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+  color: var(--second-level-color);
 }
 
 .modal-form-input-wrapper {
@@ -915,16 +921,25 @@ img {
   padding-left: 16px;
   width: 358px;
   height: 50px;
+  outline: none;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  outline: none;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-submit-input:focus {
   border: 1px solid var(--accent-color);
   border-radius: 3px;
+}
+
+.footer-submit-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-submit-button {
