--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,7 @@ img {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: #ffffff;
 }
 
 .footer-submit-input:focus {
